# simple_chat

./: .gitignore  README.md
client/: CMakeLists.txt
client/src/: client.cpp  client.hpp  handler.hpp  main.cpp
client/src/session/: server_session.cpp  server_session.hpp
include/: custom_packet.hpp
server/: CMakeLists.txt
server/src/: handler.hpp  main.cpp  server.cpp  server.hpp
server/src/session/: client_session.cpp  client_session.hpp  session_manager.cpp  session_manager.hpp
servercore/: CMakeLists.txt
servercore/include/: LDBuffer.hpp  LDClient.hpp  LDConnector.hpp  LDCore.hpp  LDError.hpp  LDHandler.hpp  LDIOContext.hpp  LDListner.hpp  LDMessage.hpp  LDPacketHeader.hpp  LDServer.hpp  LDServerEngine.hpp  LDSession.hpp  LDtsqueue.hpp  pch.hpp
servercore/src/: LDBuffer.cpp  LDConnector.cpp  LDHandler.cpp  LDIOContext.cpp  LDListner.cpp  LDSession.cpp
